Second prototype - whole list is contentEditable

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     </head>
     <body>
         <main>
-            <ul>
-                <li contentEditable="plaintext-only">List item</li>
-                <li contentEditable="plaintext-only" class="completed">Completed item</li>
-                <li contentEditable="plaintext-only">Other list item</li>
+            <ul contentEditable>
+                <li>List item</li>
+                <li data-completed=true>Completed item</li>
+                <li>Other list item</li>
             </ul>
 
             <button type=button>Add</button>
