--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
     <head>
         <title>Listy</title>
         <meta name=viewport content="width=device-width, initial-scale=1">
-        <link rel=stylesheet href=styles/index.css>
+        <link rel=stylesheet href=./styles/index.css>
         <script type=module src=./scripts/index.mjs></script>
     </head>
     <body>
         <main>
             <ul>
-                <li contentEditable="plaintext-only">List item</li>
-                <li contentEditable="plaintext-only" class="completed">Completed item</li>
-                <li contentEditable="plaintext-only">Other list item</li>
+                <li contentEditable>List item</li>
+                <li contentEditable class="completed">Completed item</li>
+                <li contentEditable>Other list item</li>
             </ul>
 
             <button type=button>Add</button>
