--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <li contentEditable>Other list item</li>
             </ul>
 
-            <button type=button>Add</button>
+            <button type=button aria-label="Add">+</button>
         </main>
     </body>
 </html>
