Improve navigating between multi–line items

--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
                 <li contentEditable>List item</li>
                 <li contentEditable class="completed">Completed item</li>
                 <li contentEditable>Other list item</li>
+                <li contentEditable>Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+                <li contentEditable>End of list</li>
             </ul>
 
             <button type=button aria-label="Add">+</button>
+
+            <ul aria-hidden="true" class="height-tester-container">
+                <li aria-hidden id="height-tester"></li>
+            </ul>
         </main>
     </body>
 </html>
